# src/assessment-test/assessment-test.controller.ts
@@ -9,7 +9,6 @@ import {
   Patch,
   Post,
   Query,
-  UseGuards,
 } from '@nestjs/common';
 import {
   ApiBody,
@@ -22,7 +21,6 @@ import {
 import {
   ActiveUser,
   IActiveUserData,
-  RemoteAuthGuard,
   Role,
   Roles,
 } from '@tmdjr/ngx-auth-client';
@@ -35,7 +33,11 @@ import {
   UserSubjectEligibilityDto,
   UserSubjectsEligibilityQueryDto,
 } from './dto/create.dto';
-import { AssessmentTestDocument } from './schemas/assessment-test.schemas';
+import {
+  CreateAssessmentTestDto,
+  UpdateAssessmentTestDto,
+  AttemptQuestionsDto,
+} from './dto/definition.dto';
 
 @ApiTags('Assessment Tests')
 @Controller('assessment-test')
@@ -43,28 +45,28 @@ export class AssessmentTestController {
   constructor(private assessmentTestService: AssessmentTestService) {}
 
   @Post()
-  @UseGuards(RemoteAuthGuard)
+  @Roles(Role.Admin)
   @ApiCreatedResponse({ type: AssessmentTestDto })
-  create(@Body() assessmentTest: AssessmentTestDocument) {
+  create(@Body() assessmentTest: CreateAssessmentTestDto) {
     return this.assessmentTestService.create(assessmentTest);
   }
 
   @Get()
-  @UseGuards(RemoteAuthGuard)
-  @ApiOkResponse({ isArray: true })
+  @Roles(Role.Admin)
+  @ApiOkResponse({ type: AssessmentTestDto, isArray: true })
   fetch() {
     return this.assessmentTestService.fetch();
   }
 
   @Patch()
-  @UseGuards(RemoteAuthGuard)
+  @Roles(Role.Admin)
   @ApiOkResponse({ type: AssessmentTestDto })
-  update(@Body() assessmentTest: AssessmentTestDocument) {
+  update(@Body() assessmentTest: UpdateAssessmentTestDto) {
     return this.assessmentTestService.update(assessmentTest);
   }
 
   @Delete()
-  @UseGuards(RemoteAuthGuard)
+  @Roles(Role.Admin)
   @HttpCode(HttpStatus.NO_CONTENT)
   @ApiNoContentResponse()
   delete(@Body() id: string) {
@@ -72,7 +74,6 @@ export class AssessmentTestController {
   }
 
   @Get('user-asssessments')
-  @UseGuards(RemoteAuthGuard)
   @ApiOkResponse({ type: UserAssessmentTestDto, isArray: true })
   fetchUsersAssessments(@ActiveUser() user: IActiveUserData) {
     return this.assessmentTestService.fetchUsersAssessments(user.sub);
@@ -86,7 +87,6 @@ export class AssessmentTestController {
   }
 
   @Get('user-subjects-eligibility')
-  @UseGuards(RemoteAuthGuard)
   @ApiQuery({
     name: 'subjects',
     required: true,
@@ -106,7 +106,7 @@ export class AssessmentTestController {
   }
 
   @Get('admin-user-subjects-eligibility/:id')
-  @UseGuards(RemoteAuthGuard)
+  @Roles(Role.Admin)
   @ApiQuery({
     name: 'subjects',
     required: true,
@@ -126,7 +126,6 @@ export class AssessmentTestController {
   }
 
   @Post('start-test')
-  @UseGuards(RemoteAuthGuard)
   @ApiBody({ type: StartTestDto })
   @ApiCreatedResponse({ type: UserAssessmentTestDto })
   startTest(@ActiveUser() user: IActiveUserData, @Body() body: StartTestDto) {
@@ -134,15 +133,33 @@ export class AssessmentTestController {
   }
 
   @Post('submit-test')
-  @UseGuards(RemoteAuthGuard)
+  @HttpCode(HttpStatus.OK)
   @ApiBody({ type: SubmitTestDto })
   @ApiOkResponse({ type: UserAssessmentTestDto })
-  submitTest(@Body() body: SubmitTestDto) {
-    return this.assessmentTestService.submitTest(body.testId, body.answers);
+  submitTest(@ActiveUser() user: IActiveUserData, @Body() body: SubmitTestDto) {
+    return this.assessmentTestService.submitTest(
+      body.testId,
+      body.answers,
+      user.sub
+    );
+  }
+
+  @Get('attempts/:id/questions')
+  @ApiOkResponse({ type: AttemptQuestionsDto })
+  questions(@Param('id') id: string, @ActiveUser() user: IActiveUserData) {
+    return this.assessmentTestService.questions(id, user.sub);
+  }
+
+  @Delete(':id')
+  @Roles(Role.Admin)
+  @HttpCode(HttpStatus.NO_CONTENT)
+  @ApiNoContentResponse()
+  deleteById(@Param('id') id: string) {
+    return this.assessmentTestService.delete(id);
   }
 
   @Get(':id')
-  @UseGuards(RemoteAuthGuard)
+  @Roles(Role.Admin)
   @ApiOkResponse({ type: AssessmentTestDto })
   fetchAssessmentTest(@Param('id') id: string) {
     return this.assessmentTestService.fetchAssessmentTest(id);
